--- a/_includes/get_series_text.html
+++ b/_includes/get_series_text.html
@@ -1,30 +1,62 @@
-{%- assign normalized_series = include.series | downcase | strip -%}
+{%- comment %}
+  get_series_text.html
+  Generates grammatically correct text around a linked series name.
+  - Adds "the" before the series unless the series name starts with "The ".
+  - Adds "series" after the name unless it contains a common series-type noun (Saga, Trilogy, etc.).
 
-{%- comment -%}Some series have "The" in them in which case we don't want to
-write "the The".{%- endcomment -%}
-{%- if normalized_series contains "the"-%}
-  {%- assign the_placeholder = " " -%}
-{%- else -%}
-  {%- assign the_placeholder = " the " -%}
+  Parameters:
+  - series: The name of the series (string).
+{% endcomment -%}
+
+{%- assign raw_series_name = include.series | strip -%}
+{%- assign normalized_series_name = raw_series_name | downcase -%}
+
+{%- comment %}
+  Check if we need to prepend "the".
+  Only skip if the series name actually starts with "the ".
+  We check by slicing the first 4 characters.
+{% endcomment -%}
+{%- assign first_four_chars = normalized_series_name | slice: 0, 4 -%}
+{%- assign starts_with_the = false -%}
+{%- if first_four_chars == "the " -%}
+  {%- assign starts_with_the = true -%}
 {%- endif -%}
 
-{%- comment -%}Some series have a "series-like" noun in them, like "Saga",
-"Trilogy", etc. in them in which case we don't want to write "Saga series".{%- endcomment -%}
-{%- assign series_words = "saga|trilogy|cantos|chronicle|book|cycle|mythos" | split: "|" -%}
-{%- assign found_series_word = false -%}
-{%- for series_word in series_words -%}
-  {%- if normalized_series contains series_word -%}
-    {%- assign found_series_word = true -%}
+{%- if starts_with_the -%}
+  {%- assign the_prefix = "" -%}
+{%- else -%}
+  {%- assign the_prefix = "the " -%}
+{%- endif -%}
+
+
+{%- comment %}
+  Check if we need to append "series".
+  Define common words that imply a series type (alphabetized). Add more as needed.
+  We check for whole words by padding with spaces.
+{% endcomment -%}
+{%- assign series_type_words = "anthology|arc|book|cantos|chronicle|collection|cycle|mythos|saga|sequence|trilogy|universe" | split: "|" | sort -%}
+{%- assign contains_series_type_word = false -%}
+{%- assign padded_normalized_series = " " | append: normalized_series_name | append: " " -%}
+
+{%- for word in series_type_words -%}
+  {%- assign padded_word_to_check = " " | append: word | append: " " -%}
+  {%- if padded_normalized_series contains padded_word_to_check -%}
+    {%- assign contains_series_type_word = true -%}
     {%- break -%}
   {%- endif -%}
 {%- endfor -%}
 
-{%- if found_series_word == false -%}
-  {%- assign series_placeholder = " series" -%}
+{%- if contains_series_type_word -%}
+  {%- assign series_suffix = "" -%}
 {%- else -%}
-  {%- assign series_placeholder = "" -%}
+  {%- assign series_suffix = " series" -%}
 {%- endif -%}
 
-{%- capture output -%}{{ the_placeholder }}{% include series_link.html series=include.series %}{{ series_placeholder }}{% endcapture %}
+{%- comment %} Construct the final output with the linked series name {% endcomment -%}
+{%- capture output -%}
+  {{- the_prefix -}}
+  {%- include series_link.html series=raw_series_name -%}
+  {{- series_suffix -}}
+{%- endcapture -%}
 
-{{- output -}}
+{{- output | strip -}}
