Remove escape_once in backlinks
This was causing problems when there were things like `'` in the book
title, as was the cause for Dragon's Egg.

This fixes #78.

--- a/_includes/book_backlinks.html
+++ b/_includes/book_backlinks.html
@@ -18,7 +18,7 @@
   both the markdown include tag and the potential final HTML link. Escape the
   title for the markdown check in case it contains quotes.
 {% endcomment %}
-{%- capture target_markdown %}book_link.html title="{{ this_title_downcased | escape_once }}"{% endcapture -%}
+{%- capture target_markdown %}book_link.html title="{{ this_title_downcased }}"{% endcapture -%}
 {%- capture target_url %}{{ this_url }}{% endcapture -%}
 
 {% comment %}
