--- a/_includes/resume_experience.html
+++ b/_includes/resume_experience.html
@@ -1,13 +1,13 @@
 <div class="resume-header-grid">
     {% comment %}The first line including company and location. {% endcomment %}
-    <div class="resume-company"><h3>{{ include.company | markdownify }}</h3></div>
-    <div class="resume-location">{{ include.location | markdownify }}</div>
+    <div class="resume-company"><h3>{{ include.company }}</h3></div>
+    <div class="resume-location">{{ include.location }}</div>
     {% comment %}The second line including position and dates. {% endcomment %}
-    <div class="resume-position">{{ include.position | markdownify }}</div>
-    <div class="resume-dates">{{ include.dates | markdownify }}</div>
+    <div class="resume-position">{{ include.position }}</div>
+    <div class="resume-dates">{{ include.dates }}</div>
     {% comment %}The third line including position and dates. {% endcomment %}
     {% if include.position_2 != null %}
-      <div class="resume-position">{{ include.position_2 | markdownify }}</div>
-      <div class="resume-dates">{{ include.dates_2 | markdownify }}</div>
+      <div class="resume-position">{{ include.position_2 }}</div>
+      <div class="resume-dates">{{ include.dates_2 }}</div>
     {% endif %}
 </div>
