Add JSON-LD structured data for book reviews
Implements Schema.org structured data (JSON-LD) for book review pages
(`layout: book`) to improve SEO and help search engines understand the
content.

- Creates `_includes/book_json_ld.html` to generate the JSON-LD script.

- Uses `Review` and `Book` schema types.

- Populates data using page front matter (title, author, rating, image,
  isbn, awards, series, etc.) and site config (reviewer name, site URL).

- Sets reviewer/publisher as a `Person` based on site config.

- Cleans `reviewBody` by stripping HTML/newlines from `page.content`.

- Includes the new file in the `_layouts/book.html` layout.

- Recommends adding `isbn` to book front matter for best results.

--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -53,7 +53,8 @@ don't find them.{% endcomment %}
 
   {{ content }}
 
-  {% comment %}Links to other reviews.{% endcomment %}
+{% comment %} Include Structured Data (JSON-LD) {% endcomment %}
+{% include book_json_ld.html %}
 
 </article>
 
