--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,6 +33,9 @@ layout: default
 
   {{ content }}
 
+{% comment %} Include Structured Data (JSON-LD) for Blog Post {% endcomment %}
+{% include post_json_ld.html %}
+
 </article>
 
 <hr>
