Add JSON-LD structured data for author pages
Implements Schema.org structured data (JSON-LD) for author pages
(`layout: author_page`) to improve SEO and help search engines identify
authors.

- Creates `_includes/author_json_ld.html` to generate the JSON-LD script
  using the `Person` schema type.

- Populates essential data (`name`, `url`) automatically from the author
  page.
- Optionally includes `sameAs` (Wikidata, Wikipedia, etc.),
  `description`, and `worksAuthored` based on author page front matter
  or site data.

- Includes the new file in the `_layouts/author_page.html` layout
  (assumed).

- Updates the script that creates new author pages to set other fields
  to null.

--- a/_layouts/author_page.html
+++ b/_layouts/author_page.html
@@ -13,4 +13,8 @@ layout: default
     }}</span>'s books:
 
   {% include list_books_by_series.html author=page.title %}
+
+{% comment %} Include Structured Data (JSON-LD) for Author {% endcomment %}
+{% include author_json_ld.html %}
+
 </div>
