Update posts to use unit template

--- a/_includes/units.html
+++ b/_includes/units.html
@@ -49,4 +49,4 @@
   {{- number -}}
   {{- thin_nbsp -}}
   <abbr class="unit-abbr" title="{{ unit_name | escape }}">{{ unit_symbol | escape }}</abbr>
-</span>{%- null -%}
+</span>
