Auto-insert superscript commas between adjacent footnotes
Previously we did this with CSS, but it failed if footnotes were on
different words in the same paragraph, the second one would have a
comman when it shouldn't.

Instead we now use Liquid `replace` in the layout to find adjacent
footnote references (`</a></sup><sup `) and inserts a superscripted
comma (`<sup class="fn-separator">, </sup>`) between them.

This fixes #79.

--- a/_layouts/substitute.html
+++ b/_layouts/substitute.html
@@ -10,7 +10,7 @@ This replaces pieces of rendered page with new pieces, all at compile time.
   | replace: '<div class="footnotes" role="doc-endnotes">', '<hr><div class="footnotes" role="doc-endnotes">'
   | replace: '=[', '<span class="book-title">'
   | replace: ']=', '</span>'
+  | replace: '</a></sup><sup id="fnref', '</a></sup><sup class="fn-separator">,&#x202F;</sup><sup id="fnref'
 %}
 
 {{output}}
-
